--- a/research.html
+++ b/research.html
@@ -122,13 +122,13 @@
 }</code></pre>
 </div> </li>
 
-<li><strong>Deng, K.</strong> and Peng, Z.<a href="https://arxiv.org/pdf/1911.09900" target="_blank">An inexact augmented Lagrangian method for nonsmooth optimization on Riemannian manifold.</a> <em>arXiv preprint arXiv:1911.09900. </em>, 2019 
+<li><strong>Deng, K.</strong> and Peng, Z.<a href="https://academic.oup.com/imajna/advance-article-abstract/doi/10.1093/imanum/drac018/6590238" target="_blank">An inexact augmented Lagrangian method for nonsmooth optimization on Riemannian manifold.</a> <em>arXiv preprint arXiv:1911.09900. </em>, 2019 
 	<a href="javascript:showhide('papercite_5_block')"> [Bibtex] </a>
     <div id="papercite_5_block" style="display:none;">
 <pre><code class="tex bibtex">@ARTICLE{kangkang2019inexact,
   title={An inexact augmented Lagrangian method for nonsmooth optimization on Riemannian manifold},
   author={Kangkang, Deng and Zheng, Peng},
-  journal={arXiv preprint arXiv:1911.09900},
+  journal={IMA Journal of Numerical Analysis},
   year={2019}
 }</code></pre> 
 </div> </li>
