--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
     <div class="wrapper">
       <header>
         <h1>DENG KANGKANG</h1>
-        <p>Doctoral Student<br>Fuzhou University<br>School of Mathematics and Computer Science</p>
+        <p>Postdoctor<br>Peking University<br>Beijing International Center For Mathematical Research</p>
     <h3><p class="view"><a href="https://KANGKANG-DENG.github.io/">Home</a></p></h3>
         <h3><p class="view"><a href="https://KANGKANG-DENG.github.io/research.html">Research</a></p></h3>
     <h3><p class="view"><a href="https://KANGKANG-DENG.github.io/research/CV.pdf">CV</a></p></h3>  
@@ -89,11 +89,27 @@
         <a href="https://orcid.org/0000-0003-4609-747X"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
         <a href="https://github.com/KKDeng"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
 
-    <p><b>Contact:</b><br>Qi Shan Campus of Fuzhou University, 2 Xue Yuan Road<br><a href="mailto:freedeng1208@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i>freedeng1208@gmail.com</a><br><i class="fas fa-phone"></i>(+86) 13003897286</p>
+    <p><b>Contact:</b><br>北京市海淀区颐和园路5号<br><a href="mailto:freedeng1208@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i>freedeng1208@gmail.com</a><br><i class="fas fa-phone"></i>(+86) 13003897286</p>
       </header>
       <section>
 <ol type="1" class="papercite_bibliography">
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Refereed Publications</h2>
+	
+	
+	<li><strong>Deng, K.</strong>, Peng, Z. <a href=" https://doi.org/10.1093/imanum/drac018" target="_blank">A manifold inexact augmented Lagrangian method for nonsmooth optimization on Riemannian submanifolds in Euclidean space.</a> <em>IMA Journal of Numerical Analysis </em>, drac018. 2022 
+	<a href="javascript:showhide('papercite_7_block')"> [Bibtex] </a>
+    <div id="papercite_7_block" style="display:none;">
+<pre><code class="tex bibtex">@article{deng2022manifold,
+  title={A manifold inexact augmented Lagrangian method for nonsmooth optimization on Riemannian submanifolds in Euclidean space},
+  author={Deng, Kangkang and Peng, Zheng},
+  journal={ IMA Journal of Numerical Analysis},
+  volume={},
+  number={},
+  pages={},
+  year={2022}
+}</code></pre>
+</div> </li>
+	
 	
 	<li><strong>Deng, K.</strong>, Peng, Z. and Chen, J. <a href="https://www.aimsciences.org/article/exportPdf?id=e3bc173a-e863-488f-a3fd-f9e6a5601e01" target="_blank">Sparse probabilistic Boolean network problems: A partial proximal-type operator splitting method.</a> <em>Journal of Industrial & Management Optimization </em>, 15(4), pp.1881-1896. 2019 
 	<a href="javascript:showhide('papercite_7_block')"> [Bibtex] </a>
