--- a/research.html
+++ b/research.html
@@ -111,6 +111,18 @@
 </div> </li>
 	
 	
+	
+	<li><strong>Deng, K.</strong> and Peng, Z. and Zhu, W<a href="https://link.springer.com/article/10.1007/s40305-022-00449-x" target="_blank">A Discriminative Projection and Representation-Based Classification Framework for Face Recognition.</a> <em>Journal of the Operations Research Society of China. </em>, 2022 
+	<a href="javascript:showhide('papercite_11_block')"> [Bibtex] </a>
+    <div id="papercite_11_block" style="display:none;">
+<pre><code class="tex bibtex">@ARTICLE{kangkang2022discriminate,
+  title={A Discriminative Projection and Representation-Based Classification Framework for Face Recognition},
+  author={Kangkang, Deng and Zheng, Peng and  Wenxing Zhu},
+  journal={SIAM Journal on Imaging Sciences},
+  year={2022}
+}</code></pre> 
+</div> </li>
+	
 	<li><strong>Deng, K.</strong>, Peng, Z. and Chen, J. <a href="https://www.aimsciences.org/article/exportPdf?id=e3bc173a-e863-488f-a3fd-f9e6a5601e01" target="_blank">Sparse probabilistic Boolean network problems: A partial proximal-type operator splitting method.</a> <em>Journal of Industrial & Management Optimization </em>, 15(4), pp.1881-1896. 2019 
 	<a href="javascript:showhide('papercite_7_block')"> [Bibtex] </a>
     <div id="papercite_7_block" style="display:none;">
@@ -125,6 +137,32 @@
 }</code></pre>
 </div> </li>
 
+
+	<li>Wang, Y., <strong>Deng, K.</strong>, Liu, H., Wen, Z. <a href="https://arxiv.org/pdf/2109.11707" target="_blank">A Decomposition Augmented Lagrangian Method for Low-rank Semidefinite Programming.</a> <em>Accepted at SIAM journal of Optimization </em>, 2023 
+	<a href="javascript:showhide('papercite_6_block')"> [Bibtex] </a>
+    <div id="papercite_6_block" style="display:none;">
+<pre><code class="tex bibtex">@article{jiang2019two,
+  title={A Decomposition Augmented Lagrangian Method for Low-rank Semidefinite Programming},
+  author={Wang Yifei and Deng, Kangkang and Liu Haoyang and Wen Zaiwen},
+  journal={https://arxiv.org/pdf/2109.11707},
+  pages={},
+  year={2023},
+  publisher={}
+}</code></pre>
+</div> </li>
+
+<li><strong>Deng, K.</strong> and Peng, Z.<a href="https://link.springer.com/article/10.1007/s40305-022-00449-x" target="_blank">Trace Lasso Regularization for Adaptive Sparse Canonical Correlation Analysis via Manifold Optimization Approach.</a> <em>Journal of the Operations Research Society of China. </em>, 2022 
+	<a href="javascript:showhide('papercite_11_block')"> [Bibtex] </a>
+    <div id="papercite_11_block" style="display:none;">
+<pre><code class="tex bibtex">@ARTICLE{kangkang2022inexact,
+  title={Trace Lasso Regularization for Adaptive Sparse Canonical Correlation Analysis via Manifold Optimization Approach},
+  author={Kangkang, Deng and Zheng, Peng},
+  journal={Journal of the Operations Research Society of China},
+  year={2022}
+}</code></pre> 
+</div> </li>
+
+
 	<li>Jiang, B., Peng, Z. and <strong>Deng, K.</strong> <a href="https://link.springer.com/article/10.1007/s41980-019-00298-0" target="_blank">Two New Customized Proximal Point Algorithms Without Relaxation for Linearly Constrained Convex Optimization.</a> <em>Bulletin of the Iranian Mathematical Society </em>, pp.1-28. 2019 
 	<a href="javascript:showhide('papercite_6_block')"> [Bibtex] </a>
     <div id="papercite_6_block" style="display:none;">
@@ -138,27 +176,11 @@
 }</code></pre>
 </div> </li>
 
-<li><strong>Deng, K.</strong> and Peng, Z.<a href="https://academic.oup.com/imajna/advance-article-abstract/doi/10.1093/imanum/drac018/6590238" target="_blank">An inexact augmented Lagrangian method for nonsmooth optimization on Riemannian manifold.</a> <em>arXiv preprint arXiv:1911.09900. </em>, 2019 
-	<a href="javascript:showhide('papercite_5_block')"> [Bibtex] </a>
-    <div id="papercite_5_block" style="display:none;">
-<pre><code class="tex bibtex">@ARTICLE{kangkang2019inexact,
-  title={An inexact augmented Lagrangian method for nonsmooth optimization on Riemannian manifold},
-  author={Kangkang, Deng and Zheng, Peng},
-  journal={IMA Journal of Numerical Analysis},
-  year={2019}
-}</code></pre> 
-</div> </li>
 
-<li><strong>Deng, K.</strong> and Peng, Z.<a href="https://arxiv.org/pdf/2003.09195" target="_blank">An Inexact Manifold Augmented Lagrangian Method for Adaptive Sparse Canonical Correlation Analysis with Trace Lasso Regularization.</a> <em>arXiv preprint arXiv:2003.09195. </em>, 2020 
-	<a href="javascript:showhide('papercite_11_block')"> [Bibtex] </a>
-    <div id="papercite_11_block" style="display:none;">
-<pre><code class="tex bibtex">@ARTICLE{kangkang2020inexact,
-  title={An Inexact Manifold Augmented Lagrangian Method for Adaptive Sparse Canonical Correlation Analysis with Trace Lasso Regularization},
-  author={Kangkang, Deng and Zheng, Peng},
-  journal={arXiv preprint arXiv:2003.09195},
-  year={2020}
-}</code></pre> 
-</div> </li>
+
+
+
+
 
     <hr>
 
@@ -169,12 +191,7 @@
 <pre><code class="tex bibtex">Come soon</code></pre> 
 </div> </li>
 
-<li>Peng, Z. and <strong>Deng, K.</strong>. A Semi-supervised Progressive Sparse Representation-based Classification for Face Recognition with Insufficient Samples.<em> Submitted to IEEE Signal Processing Letters. </em>, 2019 
-	<a href="javascript:showhide('papercite_3_block')"> [Bibtex] </a>
-    <div id="papercite_3_block" style="display:none;">
-<pre><code class="tex bibtex">Come soon</code></pre> 
-</div> </li>
-<hr>
+
 
     
       </section>
